Fix nested list alignment

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@
 
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
 }
 
 body {
@@ -18,6 +18,14 @@ body {
 
 button {
     cursor: pointer;
+}
+
+input[type='checkbox'] {
+    cursor: pointer;
+}
+
+ol, ul {
+    padding-left: 2rem;
 }
 
 .hidden {
